--- a/Uarung.Web/Views/Transaction/Detail.cshtml
+++ b/Uarung.Web/Views/Transaction/Detail.cshtml
@@ -1,7 +1,9 @@
-﻿@model TransactionDetailViewModel;
+﻿@model TransactionDetailViewModel
 @{
     ViewData[Constant.ViewDataKey.Title] = $"Detail Transaction - {Model.Transaction.Id}";
-    var isPaid = Model.Transaction.PaymentStatus.Equals(Constant.PaymentStatus.Paid);
+    var paymentStatus = Model.Transaction.PaymentStatus;
+    var isPaid = paymentStatus == Constant.PaymentStatus.Paid;
+    var isCanceled = paymentStatus == Constant.PaymentStatus.Canceled;
     var priceWithDiscount = Model.Transaction.TotalPrice - Model.Transaction.Discount.Value;
     var isDiscount = Model.Transaction.Discount.Value > 0;
     var urlPrint = Url.Action("Print", new {id = Model.Transaction.Id});
@@ -22,6 +24,24 @@
     </style>
 }
 
+<div class="modal fade" id="modalCancel">
+    <div class="modal-dialog modal-sm">
+        <div class="modal-content">
+            <div class="modal-body">
+                <h5 class="text-center">
+                    Are you sure want to cancel this transaction ?
+                </h5>
+            </div>
+            <div class="modal-footer">
+                <form action="@Url.Action("Cancel", new { id = Model.Transaction.Id })" method="get">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="submit" class="btn btn-primary">Yes</button>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+
 <div class="row mt-3 mb-5">
     <div class="col-md-4 offset-md-1 col-information mt-2">
         <h4>Detail Transaction</h4>
@@ -40,18 +60,30 @@
                     {
                         <span class="badge badge-success p-1">Paid</span>
                     }
-                    else
+                    else if (isCanceled)
+                    {
+                        <span class="badge badge-danger p-1">Canceled</span>
+                    }
+                    else if (paymentStatus == Constant.PaymentStatus.Hold)
                     {
                         <span class="badge badge-warning p-1">Hold</span>
                     }
                 </span>
-                @if (isPaid)
-                {
-                    <button class="btn btn-outline-secondary btn-sm lh-0 ml-auto" 
-                            onclick="window.open('@urlPrint', '', 'width=700,height=400')">
-                        Print
-                    </button>
-                }
+                <div class="d-flex ml-auto">
+                    @if (!isCanceled)
+                    {
+                        <button class="btn btn-outline-secondary btn-sm lh-0" data-toggle="modal" data-target="#modalCancel">
+                            Cancel
+                        </button>
+                    }
+                    @if (isPaid)
+                    {
+                        <button class="btn btn-outline-secondary btn-sm lh-0 ml-2" 
+                                onclick="window.open('@urlPrint', '', 'width=700,height=400')">
+                            Print
+                        </button>
+                    }
+                </div>
             </div>
             <div class="card-body">
                 <table class="table mb-0">
