--- a/Uarung.Web/Views/Product/Edit.cshtml
+++ b/Uarung.Web/Views/Product/Edit.cshtml
@@ -76,7 +76,7 @@
                 <div class="col">
                     <div class="form-group">
                         <label>Name</label>
-                        <input type="text" name="name" class="form-control" value="@Model.Product.Name" required/>
+                        <input type="text" name="name" maxlength="50" class="form-control" value="@Model.Product.Name" required/>
                     </div>
                 </div>
                 <div class="col">
