--- a/Uarung.Web/Views/Product/Add.cshtml
+++ b/Uarung.Web/Views/Product/Add.cshtml
@@ -28,7 +28,7 @@
                 <div class="col">
                     <div class="form-group">
                         <label>Name</label>
-                        <input type="text" name="name" class="form-control" required/>
+                        <input type="text" name="name" maxlength="50" class="form-control" required/>
                     </div>
                 </div>
                 <div class="col">
