--- a/Uarung.Web/Views/User/Edit.cshtml
+++ b/Uarung.Web/Views/User/Edit.cshtml
@@ -21,34 +21,39 @@
 @section ScriptFooter
 {
     <script type="text/javascript">
-        $("[name='Role']").val($("[data-role-selected='true']").attr("value"));
-        $("[name='Gender']").val($("[data-gender-selected='true']").attr("value"));
+        $(function() {
+            $("[name='Role']").val($("[data-role-selected='true']").attr("value"));
+            $("[name='Gender']").val($("[data-gender-selected='true']").attr("value"));
+            $(".phone").on("keypress", function(event) {
+                if(isNaN(event.key) || event.keyCode === 18)
+                    return false;
+            });
+        })();
     </script>
 }
 
 <div class="row mb-5">
     <div class="col-md-6">
         <div class="d-flex align-items-baseline mb-3">
-            <h3 class="m-0">Edit User</h3>
-            <p class="mb-0 ml-2"> @Model.Id</p>
+            <h3>Edit User</h3>
         </div>
         <form action="@Url.Action("Submit")" method="POST" role="form" autocomplete="off">
             <input name="Id" type="hidden" value="@Model.Id"/>
             <div class="form-group">
                 <label>Full Name</label>
-                <input type="text" name="Name" class="form-control" value="@Model.Name" required/>
+                <input type="text" name="Name" class="form-control" value="@Model.Name" maxlength="50" required/>
             </div>
             <div class="row">
                 <div class="col">
                     <div class="form-group">
                         <label>Phone</label>
-                        <input type="number" name="Phone" class="form-control" value="@Model.Phone" required/>
+                        <input type="text" name="Phone" class="form-control phone" value="@Model.Phone" maxlength="15" required/>
                     </div>
                 </div>
                 <div class="col">
                     <div class="form-group">
                         <label>Email</label>
-                        <input type="email" name="Email" class="form-control" value="@Model.Email" required/>
+                        <input type="email" name="Email" class="form-control" value="@Model.Email" maxlength="50" required/>
                     </div>
                 </div>
             </div>
@@ -87,11 +92,11 @@
             <hr/>
             <div class="form-group">
                 <label>Username</label>
-                <input type="text" name="Username" class="form-control" value="@Model.Username" required/>
+                <input type="text" name="Username" class="form-control" value="@Model.Username" maxlength="50" required/>
             </div>
             <div class="form-group">
                 <label>Password</label>
-                <input type="password" name="Password" class="form-control" value="@Model.Password" required/>
+                <input type="password" name="Password" class="form-control" value="@Model.Password" maxlength="50" required/>
             </div>
             <div class="d-flex">
                 <button class="btn btn-primary ml-auto mt-1" type="submit">
